tdf#141415 speed up a perf hotspot in SalLayout

a translation is just 2 additions, no need to do expensive matrix math

Change-Id: I76949e6168acc8c50ade358fdccb61575b59a5e7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183220
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 4503abd1a6788a5c3cb2168f23b63559a6cabebf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183224
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>